--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -430,6 +430,11 @@ img {max-width: 100%; max-height: 100%;}
 
 .dserpad {margin-top: 30px;}
 
+.dserpad ul{
+    list-style: none;
+    line-height: 44px;
+}
+
 .dserli {
     padding: 0px;
     list-style: none;
