--- a/dantalaya/css/bootstrap.css
+++ b/dantalaya/css/bootstrap.css
@@ -5945,3 +5945,9 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+#upright { 
+   width:600px; 
+   height:200px; 
+   background:blue; 
+   float:right;
+ }
