--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -443,6 +443,20 @@ img {max-width: 100%; max-height: 100%;}
     text-align: center;
     font-size: 22px;
 }
+.dserlileft {
+    padding: 0px;
+    list-style: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: left;
+    font-size: 22px;
+}
+ul li{
+    margin: 30px 0;
+}
+ol li{
+    margin: 0px 0;
+}
 
 .dserli li {margin-bottom: 20px;}
 
