--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -170,6 +170,7 @@ img {max-width: 100%; max-height: 100%;}
     .dbtn {font-size: 20px; padding: 4px 35px;}
     
     .dtopaddr {display: none;}
+    .navbar .dnav > li > a { margin: 0px 0px;}
 }
 
 @media screen and (max-width: 45em) {
@@ -413,7 +414,6 @@ img {max-width: 100%; max-height: 100%;}
 #dpreg span.required {color: #c0392b; font-size: 13px;}
 
 
-
 /*Services*/
 
 .dserv{
@@ -431,8 +431,11 @@ img {max-width: 100%; max-height: 100%;}
 .dserpad {margin-top: 30px;}
 
 .dserpad ul{
-    list-style: none;
     line-height: 44px;
+}
+
+.dserpad li{
+    margin:  30px 0px;
 }
 
 .dserli {
@@ -450,12 +453,6 @@ img {max-width: 100%; max-height: 100%;}
     margin-bottom: 30px;
     text-align: left;
     font-size: 22px;
-}
-ul li{
-    margin: 30px 0;
-}
-ol li{
-    margin: 0px 0;
 }
 
 .dserli li {margin-bottom: 20px;}
@@ -670,6 +667,7 @@ ol li{
     border-radius: 3px;
     color: white;
     font-size: 18px;
+    transition: 0.4s all ease-in-out;
 }
 .dropdown-menu{
     width: 100%;
@@ -680,7 +678,7 @@ ol li{
     margin: 0px 0px;
 }
 .dropdown-menu li a{
-    padding: 15px 20px;
+    padding: 15px 15px;
 }
 .dropdown-menu li a:hover{
     background: #2ecc71;
@@ -691,7 +689,7 @@ ol li{
     background: #2ecc71;
     color: white; 
     text-align: center;
-    margin-top: 30px;
+    margin:  -40px 0px;
 }
 
 .search-doctor h1{
@@ -733,11 +731,100 @@ ol li{
     transition: 0.2s all ease-in-out;
 }
 
-.patient-db{
-    min-height: 700px;
-}
 .patient-db p{
-    font-size: 50px;
+    font-size: 26px;
     text-align: center;
-    margin-top: 70px;
+}
+
+
+.profilecard{
+-webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.1);
+-moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.1);
+box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.1);
+border-radius: 5px;
+margin:  10px 0px;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+}
+
+.profilecard hr{
+    width:  100%;
+}
+
+.doctorphoto{
+    padding: 0px 40px;
+}
+
+.doctorname{
+    margin: 20px;
+        margin-bottom: -10px;
+}
+
+.doctorphoto img{
+    height: 120px;
+}
+.doctoraddress{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.doctormeta{
+    display: flex;
+    flex-direction: row;
+}
+
+.doctordetails{
+    margin:  20px 0px;
+    margin-bottom
+}
+
+.doctorworking{
+    margin:  20px;
+        font-size: 19px;
+        margin-top: 0px;
+}
+
+.search1 {
+    font-size: 20px;
+}
+
+.search1 input,
+.search1 textarea,
+.search1 select {
+    padding: 10px 20px;
+    padding-right: 220px;
+    color: #eee;
+    background: #373233;
+    margin-bottom: 42px;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    line-height: 24px;
+    border-radius: 0;
+    min-height: 48px;
+    margin-top: 0px;
+}
+
+.search1 .button{
+    padding: 10px 100px;
+
+}
+
+.search1 input:focus,
+.search1 textarea:focus,
+.search1 select:focus {color: white; background-color: #2ecc71;}
+
+.search1 button{
+    padding: 5px 40px;
+    background: none;
+    border: 2px solid #373233;
+    color: #373233;
+    margin-bottom: 40px;
+}
+.search1 button:hover,
+.search1 button:focus{
+    background: #373233;
+    color: white;
+    transition: 0.2s all ease-in-out;
 }
