--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -65,6 +65,32 @@ img {max-width: 100%; max-height: 100%;}
     display: none;
 }
 
+.block1{
+    padding:  0px 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.block1 i{
+    font-size: 70px;
+    color:  #27ae60;
+}
+
+.block1 p{
+    font-size: 20px;
+}
+
 
 /*Top Bar*/
 
@@ -241,7 +267,7 @@ img {max-width: 100%; max-height: 100%;}
 
 .dwel h1 {margin: 50px 0px; font-size: 45px;}
 
-.dbtn1 {margin: 0; margin-top: 20px; padding: 5px 30px;}
+.dbtn1 {margin: 0; margin-bottom: 40px; padding: 5px 30px;}
 
 .dbox {margin: 50px 0px; padding: 0px 70px;}
 
@@ -743,9 +769,16 @@ img {max-width: 100%; max-height: 100%;}
 box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.1);
 border-radius: 5px;
 margin:  10px 0px;
-display: flex;
-flex-direction: column;
-align-items: flex-start;
+display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+-webkit-box-orient: vertical;
+-webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+-webkit-box-align: start;
+    -ms-flex-align: start;
+        align-items: flex-start;
 }
 
 .profilecard hr{
@@ -770,8 +803,13 @@ align-items: flex-start;
 }
 
 .doctormeta{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
 }
 
 .doctordetails{
