--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -55,7 +55,7 @@ a:focus {
 
 img {max-width: 100%; max-height: 100%;}
 
-.dimg {height: 120px;}
+.dimg {height: 120px; width: 270px;}
 
 .dsearch {
     border: none;
@@ -89,6 +89,7 @@ img {max-width: 100%; max-height: 100%;}
 
 .block1 p{
     font-size: 20px;
+    text-align:  center;
 }
 
 
@@ -151,7 +152,7 @@ img {max-width: 100%; max-height: 100%;}
 
 .navbar-default {background-color: #FDFDFD;}
 
-.dnav {width: 100%; text-align: center; background-color: #FDFDFD; height: 170px;}
+.dnav {width: 100%; text-align: center; background-color: #FDFDFD; height: 120px;}
 
 .dnav>li {display: inline-block; float: none;}
 
