--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -480,9 +480,12 @@ img {max-width: 100%; max-height: 100%;}
     margin-bottom: 30px;
     text-align: left;
     font-size: 22px;
+
 }
 
-.dserli li {margin-bottom: 20px;}
+.dserlileft li{padding-bottom:  10px;}
+
+.dserli li {margin-bottom: 20px; }
 
 
 /*About*/
