--- a/dantalaya/css/style.css
+++ b/dantalaya/css/style.css
@@ -455,7 +455,7 @@ img {max-width: 100%; max-height: 100%;}
     margin-bottom: 30px;
 }
 
-.dserpad {margin-top: 30px;}
+.dserpad {margin-top: 50px;}
 
 .dserpad ul{
     line-height: 44px;
@@ -912,3 +912,29 @@ display: -webkit-box;
 .forgot-pass input:focus,
 .forgot-pass textarea:focus,
 .forgot-pass select:focus {color: #fff; background-color: #2ecc71;}
+
+.price-list{
+    padding-top: 30px;
+}
+
+.price-list ol li{
+    margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
